# Catalyst

./: .gitignore  .gitlab-ci.yml  .gitmodules  Digraph.gv  LICENSE.txt  README.md  age_test.py  async_effects.ipynb  async_effects.py  async_fl.ipynb  cifar-100-resnet-pytorch-75-17-accuracy.ipynb  cifar10_test.py  different_datasets.py  digraph_test.py  exp.ipynb  exp00_base_check.py  exp01_async_effect.py  exp02_sync_vs_async.py  exp03_sync_vs_async_low_cp.py  exp04_sync_vs_async_low_cp_single.py  exp06_sync_vs_async_low_cp_data_use.py  exp07_sasgd.py  exp08_diff_num_clients.py  exp0a_start.py  exp11_c10_scale_users.py  exp12_c10_n50_lr_sweep.py  exp13_c10_byz_effect.py  exp14_mnist_n50_lr_sweep.py  exp15_mnist_byz_effect.py  exp16_c10_related_work.py  exp17_mnist_related_work.py  exp18_mnist_basgd_paper.py  exp19_c10_kardam_damp_sweep.py  exp20_mnist_telerig_lr_sweep.py  exp21_mnist_bft_stats.py  kardam_test.py  main.py  model_flattening.ipynb  module_test.py  pyproject.toml  (+10 more)
.data/: exp00_base_check.json  exp00_base_check_epoch.json  exp00_base_check_epoch_lr.json  exp01_async_effect.json  exp02_test.json  exp03_low_client_participation.json  exp03_low_client_participation_backup.json  exp03_low_client_participation_backup2.json  exp04_low_client_participation_single.json  exp04_low_client_participation_single_test_remove_afterwards.json  exp05_pm_sched.json  exp06_low_client_participation_single_data_used.json  exp07_sa_diff_num_clients.json  exp07_sa_sgd.json  exp09_c10_lr_sweep.json  exp0A_start.json  exp10_c10_lr_check.json  exp11_c10_scale_num_users.json  (+61 more)
(+108 files in other folders)
