[project]
name = "asyncfl"
version = "0.1.0"
description = "Code to simulate Asynchronous Federated Learning systems"
authors = [
    {name = "Bart Cox", email="b.a.cox@tudelft.nl"},
    {email = "b.a.cox@tudelft.nl"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.8"

keywords = ["federated-learning", "asynchronous", "cuda"]

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"