[metadata]
name = asyncfl
version = 2023.5.1
description = "Code to simulate Asynchronous Federated Learning systems"
author = Bart Cox
author_email = b.a.cox@tudelft.nl
license = {file = "LICENSE.txt"}
long_description = file: README.md
readme = "README.md"
requires_python = ">=3.8"

keywords = ["federated-learning", "asynchronous", "cuda"]

[options]
packages = find:
install_requires = 
    numpy==1.24.2
    pandas==1.5.3
    matplotlib==3.7.0
    tqdm==4.64.1
    torch==1.13.1
    torchvision==0.14.1
    torchaudio==0.13.1
    prettyprint==0.1.5
    graphviz==0.20.1
    pytest==7.2.2
    scikit-learn==1.2.2
    seaborn==0.12.2
    torch==1.13.1
    torchvision==0.14.1
    black==23.1.0
    pyyaml==5.3.1
    hdbscan==0.8.33